# autonomous-navigation-engine

./: CMakeLists.txt  README.md
include/autonomous_navigator/: AlgorithmSelector.hpp  NavigationCore.hpp  PathExecutor.hpp
include/core/: Edge.hpp  Graph.hpp  Node.hpp
include/environment/: EnvironmentManager.hpp  MapUpdater.hpp  ObstacleDetector.hpp
include/graph_operations/: ConnectivityAnalyzer.hpp  EdgeManager.hpp  GraphBuilder.hpp  NodeManager.hpp
include/navigation_strategies/: DynamicReplanner.hpp  GlobalPathPlanner.hpp  LocalPathPlanner.hpp  MultiGoalPlanner.hpp
include/path_operations/: CostCalculator.hpp  PathOptimizer.hpp  PathSmoother.hpp  PathValidator.hpp
include/pathfinding_algorithms/: AStar.hpp  BFS.hpp  BellmanFord.hpp  DFS.hpp  Dijkstra.hpp  JumpPointSearch.hpp
include/reporting/: NavigationLogger.hpp  PathVisualiser.hpp  PerformanceProfiler.hpp
include/utilities/: ConfigManager.hpp  MathUtils.hpp  PriorityQueue.hpp
src/: main.cpp
src/autonomous_navigator/algorithm_selection/: environment_based_selection.cpp  hybrid_algorithm_switching.cpp  performance_based_selection.cpp
src/autonomous_navigator/execution/: emergency_stop_handler.cpp  path_execution_controller.cpp  real_time_navigation.cpp
src/autonomous_navigator/navigation_core/: algorithm_execution.cpp  navigator_initialization.cpp  path_following.cpp
src/core/edge/: bidirectional_check.cpp  edge_comparators.cpp  edge_constructor.cpp  weight_validation.cpp
src/core/graph/: adjacency_list_builder.cpp  connectivity_checker.cpp  edge_insertion.cpp  graph_statistics.cpp  node_insertion.cpp
src/core/node/: euclidean_distance.cpp  manhattan_distance.cpp  node_comparators.cpp  node_constructor.cpp
src/environment/environment_management/: environment_persistence.cpp  environment_switching.cpp  set_environment.cpp
src/environment/map_updates/: incremental_map_update.cpp  map_synchronization.cpp  sensor_data_integration.cpp
src/environment/obstacle_detection/: collision_prediction.cpp  dynamic_obstacle_tracking.cpp  static_obstacle_detection.cpp
src/graph_operations/analysis/: graph_diameter_calculation.cpp  minimum_spanning_tree.cpp  strongly_connected_components.cpp
src/graph_operations/edge_operations/: add_edge.cpp  edge_contraction.cpp  remove_edge.cpp  update_edge_weight.cpp
src/graph_operations/graph_building/: delaunay_triangulation.cpp  grid_graph_generator.cpp  random_graph_generator.cpp  visibility_graph_builder.cpp
src/graph_operations/node_operations/: add_node.cpp  find_nearest_node.cpp  node_clustering.cpp  remove_node.cpp
src/navigation_strategies/dynamic_replanning/: d_star_lite.cpp  incremental_search.cpp  real_time_replanning.cpp
src/navigation_strategies/global_planning/: complete_path_planning.cpp  global_optimization.cpp  waypoint_generation.cpp
src/navigation_strategies/local_planning/: dynamic_window_approach.cpp  obstacle_avoidance.cpp  potential_field_method.cpp
src/navigation_strategies/multi_goal/: multi_destination_routing.cpp  priority_based_planning.cpp  traveling_salesman.cpp
src/path_operations/cost_calculation/: calculate_path_cost.cpp  dynamic_cost_updates.cpp  multi_criteria_costing.cpp
src/path_operations/optimization/: curvature_optimization.cpp  path_length_optimization.cpp  time_optimal_planning.cpp
src/path_operations/smoothing/: bezier_curve_smoothing.cpp  corner_cutting.cpp  spline_interpolation.cpp
src/path_operations/validation/: constraint_verification.cpp  feasibility_analysis.cpp  safety_checking.cpp  validate_path.cpp
src/pathfinding_algorithms/a_star/: closed_list_management.cpp  heuristic_functions.cpp  open_list_management.cpp
src/pathfinding_algorithms/bellman_ford/: bellman_ford_core.cpp  edge_relaxation.cpp  negative_cycle_detection.cpp
src/pathfinding_algorithms/bfs/: bfs_traversal.cpp  queue_operations.cpp  unweighted_pathfinding.cpp
src/pathfinding_algorithms/dfs/: dfs_traversal.cpp  recursive_search.cpp  stack_operations.cpp
src/pathfinding_algorithms/dijkstra/: dijkstra_core.cpp  distance_relaxation.cpp  priority_queue_ops.cpp  shortest_path_tree.cpp
src/pathfinding_algorithms/jump_point_search/: grid_pruning.cpp  jps_core.cpp  jump_point_identification.cpp
src/reporting/logging/: algorithm_step_logger.cpp  error_reporting.cpp  navigation_event_logger.cpp
src/reporting/performance/: algorithm_benchmarking.cpp  execution_time_analysis.cpp  memory_usage_profiling.cpp
src/reporting/visualization/: ascii_graph_renderer.cpp  console_path_printer.cpp  svg_export.cpp
src/utilities/configuration/: json_config_loader.cpp  parameter_validation.cpp  yaml_config_loader.cpp
src/utilities/data_structures/: binary_heap.cpp  disjoint_set.cpp  fibonacci_heap.cpp
src/utilities/math/: angle_calculations.cpp  interpolation_functions.cpp  vector_operations.cpp
tests/algorithm_tests/: test_a_star.cpp  test_bellman_ford.cpp  test_bfs.cpp  test_dijkstra.cpp
tests/integration_tests/: test_environment_switching.cpp  test_full_navigation.cpp
tests/performance_tests/: algorithm_benchmarks.cpp  scability_tests.cpp
